sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:13: error: Boolean does not take parameters
    if (!isSorted()) {
                 ^