sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var n = getValueCount();
  var isSorted = false;
  do {
    isSorted =true;
    for (i <- 0 to n-2) {
      if (isSmaller(i, i+1)) {
        swap(i, i+1);
        isSorted = false;
      }
    }
    if (!isSorted()) {
    	for (i <- (n-2) to 0 by -1) {
      	if (isSmaller(i, i+1)) {
        	swap(i, i+1);
        	isSorted = false;
      	}
    	}
  	}
  } while (!isSorted)
}